// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldCheckbox 1`] = `
.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #FFFFFF;
  border-color: #DEE1E5;
  color: #FFFFFF;
}

.c4 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 input[type='checkbox']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        className=""
        id="FieldCheckboxID"
        name="thumbsUp"
        role="checkbox"
        type="checkbox"
      />
      <div
        className="c5 c6"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  />
</label>
`;

exports[`A FieldCheckbox with an error validation aligned to the bottom 1`] = `
.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 .c5 {
  background: #FFFFFF;
  border-color: #DEE1E5;
  color: #FFFFFF;
}

.c9 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c9 input[type='checkbox']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c10 .c5 {
  background: #6C43E0;
  border-color: #6C43E0;
  color: #FFFFFF;
}

.c10 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c10 input[type='checkbox']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #FFFFFF;
  border-color: #DEE1E5;
  color: #FFFFFF;
  border-color: #ED3B53;
}

.c4 .c5:hover {
  border-color: #CC1F36;
}

.c4 .c5:focus,
.c4 .c5:focus-within {
  border-color: #CC1F36;
  box-shadow: 0 0 0 2px #FFE5E9;
}

.c4 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 input[type='checkbox']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c8 {
  font-size: 0.75rem;
  color: #CC1F36;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

.c11 .c3 {
  grid-area: input;
}

.c11 .c1 {
  color: #707781;
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c11 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        className=""
        id="FieldCheckboxID"
        name="thumbsUp"
        role="checkbox"
        type="checkbox"
      />
      <div
        className="c5 c6"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  >
    <div
      className="c8"
    >
      This is an error
    </div>
  </div>
</label>
`;

exports[`A FieldCheckbox with checked value 1`] = `
.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 .c5 {
  background: #FFFFFF;
  border-color: #DEE1E5;
  color: #FFFFFF;
}

.c8 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c8 input[type='checkbox']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #6C43E0;
  border-color: #6C43E0;
  color: #FFFFFF;
}

.c4 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 input[type='checkbox']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      checked={true}
      className="c4 "
    >
      <input
        className=""
        defaultChecked={true}
        id="FieldCheckboxID"
        name="thumbsUp"
        role="checkbox"
        type="checkbox"
      />
      <div
        className="c5 c6"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  />
</label>
`;

exports[`A disabled FieldCheckbox 1`] = `
.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c4 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c4 .c5 {
  background: #FFFFFF;
  border-color: #DEE1E5;
  color: #FFFFFF;
}

.c4 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 input[type='checkbox']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c8 .c5 {
  background: #6C43E0;
  border-color: #6C43E0;
  color: #FFFFFF;
}

.c8 input[type='checkbox']:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c8 input[type='checkbox']:disabled + .c5 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c9 .c3 {
  grid-area: input;
}

.c9 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c9 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  color: #707781;
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        className=""
        disabled={true}
        id="FieldCheckboxID"
        name="thumbsUp"
        role="checkbox"
        type="checkbox"
      />
      <div
        className="c5 c6"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  />
</label>
`;

exports[`A required FieldCheckbox 1`] = `
.c7 {
  position: relative;
  width: 100%;
  height: 100%;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  position: relative;
  display: inline-block;
  width: 1rem;
  height: 1rem;
  margin: 3px;
  vertical-align: middle;
}

.c5 input[type='checkbox'] {
  opacity: 0;
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
}

.c5 .c6 {
  background: #FFFFFF;
  border-color: #DEE1E5;
  color: #FFFFFF;
}

.c5 input[type='checkbox']:focus + .c6 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c5 input[type='checkbox']:disabled + .c6 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c9 .c6 {
  background: #6C43E0;
  border-color: #6C43E0;
  color: #FFFFFF;
}

.c9 input[type='checkbox']:focus + .c6 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c9 input[type='checkbox']:disabled + .c6 {
  background: #F5F6F7;
  border-color: #DEE1E5;
  color: #F5F6F7;
}

.c2 {
  color: #343C42;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c3 {
  color: #CC1F36;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c4 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c8 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
    <span
      aria-hidden="true"
      className="c3"
    >
       
      *
    </span>
  </span>
  <div
    className="c4 "
  >
    <div
      className="c5 "
    >
      <input
        className=""
        id="FieldCheckboxID"
        name="thumbsUp"
        required={true}
        role="checkbox"
        type="checkbox"
      />
      <div
        className="c6 c7"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c8 "
  />
</label>
`;
